# dbt-fundamentals

./: .gitignore  .sqlfluff  .yamllint  CHANGELOG.md  Makefile  README.md  before.json  coverage.json  dbt_project.yml  dim_customers.md  packages.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  profiles.yml
.github/workflows/: main.yml
.state/: manifest.json
.state/manifest.json/: manifest.json
analyses/: all_dates.sql  audit_helper_compare_relation.sql  check_additional_customers_ingested.sql  check_total_income_all_customers.sql  create_objects_and_load_sample_data.sql  load_sample_data.sql  orders_by_day.sql
macros/: cents_to_dollars.sql  clean_stale_models.sql  drop_schema.sql  generate_schema_name.sql  limit_data_in_dev.sql
macros/override/: generate_schema_name.sql
macros/setup/: cleanup_db_objects.sql  create_db_objects.sql  create_sample_src_tables.sql
macros/tests/: positive_value.sql
macros/utils/: drop_schema.sql  limit_data_in_dev.sql
models/: customers.sql  schema.yml  sources.yml  stg_customers.sql
models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql
models/marts/core/: _core.md  _core.yml  dim_customers.sql  dim_customers__deprecated.md  dim_customers__deprecated.sql  fct_orders.md  fct_orders.sql  int_orders__pivoted.sql  schema.yml
models/staging/jaffle_shop/: _jaffle_shop.yml  docs.md  schema.yml  sources.yml  stg_additional_customers.sql  stg_orders.sql
models/staging/stripe/: _stripe.yml  schema.yml  sources.yml  (+1 more)
scripts/: run-dbt-profiler.sh  update-relation-profile.sh
seeds/: README.md  additional_customers.csv
tests/: assert_stg_payments_amount_is_positive.sql
tests/generic/: positive_value.sql
