[tool.poetry]
name = "dbt-fundamentals"
version = "0.1.0"
description = "Material for the dbt fundamentals course"
authors = ["Guillaume Bournique <guillaume.bournique@gmail.com>"]
readme = "README.md"
keywords = ["DBT", "SNOWFLAKE"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
dbt-snowflake = "^1.5.2"
sqlfluff = "^2.3.2"
sqlfluff-templater-dbt = "^2.3.2"
yamllint = "^1.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
