[tool.poetry]
name = "dbt-fundamentals"
version = "0.1.0"
description = "Material for the dbt fundamentals course"
authors = ["Guillaume Bournique <guillaume.bournique@gmail.com>"]
readme = "README.md"
keywords = ["DBT", "SNOWFLAKE"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
# dbt-coverage = "^0.3.4" uncomment when version compatible with dbt>1.5.0
dbt-snowflake = "^1.6.4"
sqlfluff = "^2.3.2"
sqlfluff-templater-dbt = "^2.3.2"
yamllint = "^1.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
